src/snapshots/kern__view__tests__running_elapsed_5s.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
kern  [15]  30  60  ·  10s  [tab] restart                                       
                                                                                
the quick brown                                                                 
                                                                                
                                                                                
                                                                                
[esc] quit
