src/snapshots/kern__view__tests__running_elapsed_zero.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
kern  [15]  30  60  ·  15s  [tab] restart                                       
                                                                                
the quick brown                                                                 
                                                                                
                                                                                
                                                                                
[esc] quit
