src/snapshots/kern__view__tests__typing_screen_snapshot.snap
---
source: src/view.rs
assertion_line: 239
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
kern  words: 25  [tab] restart                                                  
                                                                                
the quick brown fox                                                             
                                                                                
                                                                                
                                                                                
[esc] quit
