src/snapshots/kern__view__tests__typing_screen_waiting_snapshot.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
kern  [15]  30  60  [tab] restart                                               
                                                                                
the quick brown fox                                                             
                                                                                
                                                                                
                                                                                
[esc] quit
